; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/uvc/extr_uvc_video.c_uvc_uninit_video.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/uvc/extr_uvc_video.c_uvc_uninit_video.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uvc_streaming = type { %struct.urb** }
%struct.urb = type { i32 }

@UVC_URBS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uvc_streaming*, i32)* @uvc_uninit_video to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uvc_uninit_video(%struct.uvc_streaming* %0, i32 %1) #0 {
  %3 = alloca %struct.uvc_streaming*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.urb*, align 8
  %6 = alloca i32, align 4
  store %struct.uvc_streaming* %0, %struct.uvc_streaming** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %33, %2
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* @UVC_URBS, align 4
  %10 = icmp ult i32 %8, %9
  br i1 %10, label %11, label %36

11:                                               ; preds = %7
  %12 = load %struct.uvc_streaming*, %struct.uvc_streaming** %3, align 8
  %13 = getelementptr inbounds %struct.uvc_streaming, %struct.uvc_streaming* %12, i32 0, i32 0
  %14 = load %struct.urb**, %struct.urb*** %13, align 8
  %15 = load i32, i32* %6, align 4
  %16 = zext i32 %15 to i64
  %17 = getelementptr inbounds %struct.urb*, %struct.urb** %14, i64 %16
  %18 = load %struct.urb*, %struct.urb** %17, align 8
  store %struct.urb* %18, %struct.urb** %5, align 8
  %19 = load %struct.urb*, %struct.urb** %5, align 8
  %20 = icmp eq %struct.urb* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %11
  br label %33

22:                                               ; preds = %11
  %23 = load %struct.urb*, %struct.urb** %5, align 8
  %24 = call i32 @usb_kill_urb(%struct.urb* %23)
  %25 = load %struct.urb*, %struct.urb** %5, align 8
  %26 = call i32 @usb_free_urb(%struct.urb* %25)
  %27 = load %struct.uvc_streaming*, %struct.uvc_streaming** %3, align 8
  %28 = getelementptr inbounds %struct.uvc_streaming, %struct.uvc_streaming* %27, i32 0, i32 0
  %29 = load %struct.urb**, %struct.urb*** %28, align 8
  %30 = load i32, i32* %6, align 4
  %31 = zext i32 %30 to i64
  %32 = getelementptr inbounds %struct.urb*, %struct.urb** %29, i64 %31
  store %struct.urb* null, %struct.urb** %32, align 8
  br label %33

33:                                               ; preds = %22, %21
  %34 = load i32, i32* %6, align 4
  %35 = add i32 %34, 1
  store i32 %35, i32* %6, align 4
  br label %7

36:                                               ; preds = %7
  %37 = load i32, i32* %4, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %36
  %40 = load %struct.uvc_streaming*, %struct.uvc_streaming** %3, align 8
  %41 = call i32 @uvc_free_urb_buffers(%struct.uvc_streaming* %40)
  br label %42

42:                                               ; preds = %39, %36
  ret void
}

declare dso_local i32 @usb_kill_urb(%struct.urb*) #1

declare dso_local i32 @usb_free_urb(%struct.urb*) #1

declare dso_local i32 @uvc_free_urb_buffers(%struct.uvc_streaming*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
